--- a/src/app/password-generator/password-generator.component.html
+++ b/src/app/password-generator/password-generator.component.html
@@ -1,15 +1,17 @@
 <div class="main-body">
     <h1 class="heading">Password Generator</h1>
 
-    <label for="length">
-        Password Length:&nbsp;
-    </label>
-    <input
-        type="number"
-        id="length"
-        [(ngModel)]="passwordLength"
-        min="3"
-    />
+    <div class="password-length-div">
+        <label for="length">
+            Password Length:&nbsp;
+        </label>
+        <input
+            type="number"
+            id="length"
+            [(ngModel)]="passwordLength"
+            min="3"
+        />
+    </div>
 
     <div>
         <input 
