--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<main>
-  <div>
+<main class="bg-[#1a285f] h-screen">
+  <app-navbar />
+  <div class="h-[94vh]">
     <app-password-generator /> 
   </div>
 </main>
