--- a/src/app/password-generator/password-generator.component.html
+++ b/src/app/password-generator/password-generator.component.html
@@ -1,55 +1,84 @@
-<div class="main-body">
-    <h1 class="heading">Password Generator</h1>
+<div class="h-full flex flex-col justify-center items-center text-white ">
+    <div class="w-[80%] h-[70vh] flex items-center justify-evenly">
+        <div class="w-[50%] flex flex-col">
+            <h1 class="text-6xl">
+                Strong. Secure. Awesome. Try our random password generator.
+            </h1>
+            <p class="mt-4 text-lg">
+                A powerful generator for powerful passwords to protect your online accounts.
+            </p>
+        </div>
+        <div class="w-[50%] flex justify-end items-center">
+            <div
+                class="flex flex-col rounded-2xl overflow-hidden shadow-lg bg-white p-6 w-4/5 font-normal text-gray-600 gap-4"
+            >
+                <p class="text-gray-700">
+                    Customize Your Password
+                </p>
 
-    <div class="password-length-div">
-        <label for="length">
-            Password Length:&nbsp;
-        </label>
-        <input
-            type="number"
-            id="length"
-            [(ngModel)]="passwordLength"
-            min="3"
-        />
-    </div>
+                <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-500">
 
-    <div>
-        <input 
-            type="checkbox" 
-            id="alphabets"
-            [(ngModel)] = "includeAlphabets"
-        />
-        <label for="alphabets">
-            Include Alphabets
-        </label>
-    </div>
+                <div class="flex justify-between items-center">
+                    <label for="length">
+                        Characters 
+                    </label>
+                    <div class="w-2/3">
+                        <input 
+                            type="range" 
+                            min="1" 
+                            max="100" 
+                            [(ngModel)] = 'passwordLength' 
+                            class=" ml-3 w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-400" id="myRange"
+                        />
+                    </div>
+                    <div> {{passwordLength}} </div>
+                </div>
 
-    <div>
-        <input 
-            type="checkbox" 
-            id="numbers"
-            [(ngModel)] = "includeNumbers"
-        />
-        <label for="numbers">
-            Include Numbers
-        </label>
-    </div>
+                <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-500">
 
-    <div>
-        <input 
-            type="checkbox" 
-            id="specialCharacters"
-            [(ngModel)] = "includeSpecialCharacters"
-        />
-        <label for="specialCharacters">
-            Include Special Characters
-        </label>
-    </div>
+                <div class="">
+                    <div class="checkbox-div">
+                        <input
+                            type="checkbox"
+                            id="alphabets"
+                            [(ngModel)]="includeAlphabets"
+                        />
+                        <label for="alphabets">
+                            Include Alphabets 
+                        </label>
+                    </div>
 
-    <button (click)="generatePassword()">
-        Generate
-    </button>
-    <div>
-        Generated Password: {{ generatedPassword }}
+                    <div class="">
+                        <input
+                            type="checkbox"
+                            id="numbers"
+                            [(ngModel)]="includeNumbers"
+                        />
+                        <label for="numbers"> Include Numbers </label>
+                    </div>
+
+                    <div class="">
+                        <input
+                            type="checkbox"
+                            id="specialCharacters"
+                            [(ngModel)]="includeSpecialCharacters"
+                        />
+                        <label for="specialCharacters">
+                            Include Special Characters
+                        </label>
+                    </div>
+                </div>
+
+                <button class="generate-button" (click)="generatePassword()">
+                    Generate
+                </button>
+                <div class="">
+                    <p>Generated Password:&nbsp;</p>
+                    <span>
+                        {{ generatedPassword }}
+                    </span>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
