--- a/src/app/password-generator/password-generator.component.html
+++ b/src/app/password-generator/password-generator.component.html
@@ -1,82 +1,103 @@
-<div class="h-full flex flex-col justify-center items-center text-white ">
+<div class="h-full flex flex-col justify-center items-center text-white">
     <div class="w-[80%] h-[70vh] flex items-center justify-evenly">
         <div class="w-[50%] flex flex-col">
             <h1 class="text-6xl">
                 Strong. Secure. Awesome. Try our random password generator.
             </h1>
             <p class="mt-4 text-lg">
-                A powerful generator for powerful passwords to protect your online accounts.
+                A powerful generator for powerful passwords to protect your
+                online accounts.
             </p>
         </div>
         <div class="w-[50%] flex justify-end items-center">
             <div
-                class="flex flex-col rounded-2xl overflow-hidden shadow-lg bg-white p-6 w-4/5 font-normal text-gray-600 gap-4"
+                class="flex flex-col rounded-2xl overflow-hidden shadow-lg bg-white p-8 w-4/5 font-normal text-gray-400 gap-4 text-sm"
             >
-                <p class="text-gray-700">
-                    Customize Your Password
-                </p>
+                <p class="text-gray-700">Customize Your Password</p>
 
-                <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-500">
+                <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-500" />
 
                 <div class="flex justify-between items-center">
-                    <label for="length">
-                        Characters 
-                    </label>
+                    <label for="length"> Characters </label>
                     <div class="w-2/3">
-                        <input 
-                            type="range" 
-                            min="1" 
-                            max="100" 
-                            [(ngModel)] = 'passwordLength' 
-                            class=" ml-3 w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-400" id="myRange"
+                        <input
+                            type="range"
+                            min="5"
+                            max="100"
+                            [(ngModel)]="passwordLength"
+                            class="ml-3 w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-400"
+                            id="myRange"
                         />
                     </div>
-                    <div> {{passwordLength}} </div>
+                    <div>{{ passwordLength }}</div>
                 </div>
 
-                <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-500">
+                <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-500" />
 
-                <div class="">
-                    <div class="checkbox-div">
+                <div class="flex justify-evenly gap-2">
+                    <div class="flex items-center me-4">
                         <input
+                            id="inline-checkbox"
                             type="checkbox"
-                            id="alphabets"
                             [(ngModel)]="includeAlphabets"
+                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded"
                         />
-                        <label for="alphabets">
-                            Include Alphabets 
+                        <label for="inline-checkbox" class="ms-2 font-medium">
+                            Alphabets
                         </label>
                     </div>
-
-                    <div class="">
+                    <div class="flex items-center me-4">
                         <input
+                            id="inline-checkbox"
                             type="checkbox"
-                            id="numbers"
                             [(ngModel)]="includeNumbers"
+                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded"
                         />
-                        <label for="numbers"> Include Numbers </label>
-                    </div>
-
-                    <div class="">
-                        <input
-                            type="checkbox"
-                            id="specialCharacters"
-                            [(ngModel)]="includeSpecialCharacters"
-                        />
-                        <label for="specialCharacters">
-                            Include Special Characters
+                        <label for="inline-checkbox" class="ms-2 font-medium">
+                            Numbers
                         </label>
                     </div>
                 </div>
 
-                <button class="generate-button" (click)="generatePassword()">
-                    Generate
-                </button>
-                <div class="">
-                    <p>Generated Password:&nbsp;</p>
-                    <span>
+                <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-500" />
+
+                <div class="flex items-center justify-center">
+                    <input
+                        id="inline-checkbox"
+                        type="checkbox"
+                        [(ngModel)]="includeSpecialCharacters"
+                        class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded"
+                    />
+                    <label for="inline-checkbox" class="ms-2 font-medium">
+                        Symbols
+                    </label>
+                </div>
+
+                <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-500" />
+
+                <p class="text-gray-700">Generated Password</p>
+
+                <div class="w-full min-h-16 rounded-sm border text-balance">
+                    <p
+                        class="w-full p-4 flex justify-center items-center flex-wrap text-black text-xl min-h-16 break-all text-center"
+                    >
                         {{ generatedPassword }}
-                    </span>
+                    </p>
+                </div>
+
+                <div class="flex gap-1">
+                    <button
+                        class="border bg-blue-500 text-white rounded-md p-2 w-1/2 text-lg font-bold hover:bg-blue-700 transition"
+                        (click)="generatePassword()"
+                    >
+                        Generate Password
+                    </button>
+                    <button
+                        class="border text-blue-500 border-blue-500 rounded-md p-2 w-1/2 text-lg font-bold"
+                        (click)="copyText()"
+                    >
+                        Copy Password
+                    </button>
                 </div>
             </div>
         </div>
