--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,8 +2,7 @@
     <div class="mycontainer flex justify-between items-center px-4 py-5 h-14">
         <div class="flex items-center justify-center">
             <div class="logo font-bold text-2xl cursor-pointer">
-                <span class="text-[#1a285f]">&lt;</span>
-                Pass<span class="text-[#1a285f]">Gen</span>
+                <span class="text-[#1a285f]">&lt;</span>Pass<span class="text-[#1a285f]">Gen</span>
                 <span class="text-[#1a285f]">/&gt;</span>
             </div>
             <p
