Added More Interaction

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,7 +22,7 @@
             </p>
         </div>
         <div class="flex items-center justify-center">
-            <button class="bg-blue-500 text-white p-2 px-6 rounded-3xl">Sign In</button>
+            <button class="bg-blue-500 text-white p-2 px-6 rounded-3xl hover:bg-blue-700 transition">Sign In</button>
         </div>
     </div>
 </nav>
