--- a/src/app/password-generator/password-generator.component.html
+++ b/src/app/password-generator/password-generator.component.html
@@ -15,7 +15,7 @@
             >
                 <p class="text-gray-700">Customize Your Password</p>
 
-                <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-500" />
+                <hr class="h-px my-2 border-0 bg-gray-500" />
 
                 <div class="flex justify-between items-center">
                     <label for="length"> Characters </label>
@@ -32,7 +32,7 @@
                     <div>{{ passwordLength }}</div>
                 </div>
 
-                <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-500" />
+                <hr class="h-px my-2 border-0 bg-gray-500" />
 
                 <div class="flex justify-evenly gap-2">
                     <div class="flex items-center me-4">
@@ -59,7 +59,7 @@
                     </div>
                 </div>
 
-                <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-500" />
+                <hr class="h-px my-2 border-0 bg-gray-500" />
 
                 <div class="flex items-center justify-center">
                     <input
@@ -73,11 +73,11 @@
                     </label>
                 </div>
 
-                <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-500" />
+                <hr class="h-px my-2 border-0 bg-gray-500" />
 
                 <p class="text-gray-700">Generated Password</p>
 
-                <div class="w-full min-h-16 rounded-sm border text-balance">
+                <div class="w-full min-h-16 rounded-md border-2 text-balance">
                     <p
                         class="w-full p-4 flex justify-center items-center flex-wrap text-black text-xl min-h-16 break-all text-center"
                     >
@@ -92,11 +92,12 @@
                     >
                         Generate Password
                     </button>
+
                     <button
                         class="border text-blue-500 border-blue-500 rounded-md p-2 w-1/2 text-lg font-bold"
                         (click)="copyText()"
                     >
-                        Copy Password
+                        {{ copyButtonText }}
                     </button>
                 </div>
             </div>
