Alphabets or numbers selection compulsary

--- a/src/app/password-generator/password-generator.component.html
+++ b/src/app/password-generator/password-generator.component.html
@@ -13,12 +13,16 @@
             <div
                 class="flex flex-col rounded-2xl overflow-hidden shadow-lg bg-white p-8 w-4/5 font-normal text-gray-400 gap-4 text-sm"
             >
-                <p class="text-gray-700">Customize Your Password</p>
+                <p class="text-gray-700">
+                    Customize Your Password
+                </p>
 
                 <hr class="h-px my-2 border-0 bg-gray-500" />
 
                 <div class="flex justify-between items-center">
-                    <label for="length"> Characters </label>
+                    <label for="length">
+                        Characters
+                    </label>
                     <div class="w-2/3">
                         <input
                             type="range"
@@ -37,38 +41,47 @@
                 <div class="flex justify-evenly gap-2">
                     <div class="flex items-center me-4">
                         <input
-                            id="inline-checkbox"
+                            id="alphabets-checkbox"
                             type="checkbox"
                             [(ngModel)]="includeAlphabets"
                             class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded"
+                            (change)="validateSelection()"
                         />
-                        <label for="inline-checkbox" class="ms-2 font-medium">
+                        <label for="alphabets-checkbox" class="ms-2 font-medium">
                             Alphabets
                         </label>
                     </div>
                     <div class="flex items-center me-4">
                         <input
-                            id="inline-checkbox"
+                            id="numbers-checkbox"
                             type="checkbox"
                             [(ngModel)]="includeNumbers"
                             class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded"
+                            (change)="validateSelection()"
                         />
-                        <label for="inline-checkbox" class="ms-2 font-medium">
+                        <label for="numbers-checkbox" class="ms-2 font-medium">
                             Numbers
                         </label>
                     </div>
+                </div>
+
+                <div *ngIf="!isSelectionValid" class="text-red-500 text-center">
+                    Please select at least one option (Alphabets or Numbers)!
                 </div>
 
                 <hr class="h-px my-2 border-0 bg-gray-500" />
 
                 <div class="flex items-center justify-center">
                     <input
-                        id="inline-checkbox"
+                        id="symbols-checkbox"
                         type="checkbox"
                         [(ngModel)]="includeSpecialCharacters"
                         class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded"
                     />
-                    <label for="inline-checkbox" class="ms-2 font-medium">
+                    <label 
+                        for="symbols-checkbox" 
+                        class="ms-2 font-medium"
+                    >
                         Symbols
                     </label>
                 </div>
