Changed Password generator component

--- a/src/app/password-generator/password-generator.component.html
+++ b/src/app/password-generator/password-generator.component.html
@@ -1,45 +1,38 @@
 <div class="h-full flex flex-col justify-center items-center text-white">
-    <div class="w-[80%] h-[70vh] flex items-center justify-evenly">
-        <div class="w-[50%] flex flex-col">
-            <h1 class="text-6xl">
+    <div class="w-[90%] h-[70vh] flex flex-col lg:flex-row items-center justify-evenly">
+        <!-- Left Section -->
+        <div class="w-full lg:w-[50%] text-center lg:text-left flex flex-col">
+            <h1 class="text-4xl lg:text-6xl">
                 Strong. Secure. Awesome. Try our random password generator.
             </h1>
-            <p class="mt-4 text-lg">
-                A powerful generator for powerful passwords to protect your
-                online accounts.
+            <p class="mt-4 text-sm lg:text-lg">
+                A powerful generator for powerful passwords to protect your online accounts.
             </p>
         </div>
-        <div class="w-[50%] flex justify-end items-center">
+        <!-- Right Section -->
+        <div class="w-full lg:w-[50%] flex justify-center lg:justify-end items-center mt-8 lg:mt-0">
             <div
-                class="flex flex-col rounded-2xl overflow-hidden shadow-lg bg-white p-8 w-4/5 font-normal text-gray-400 gap-4 text-sm"
+                class="flex flex-col rounded-2xl overflow-hidden shadow-lg bg-white p-6 lg:p-8 w-full sm:w-10/12 font-normal text-gray-400 gap-4 text-xs sm:text-sm"
             >
-                <p class="text-gray-700">
-                    Customize Your Password
-                </p>
-
+                <p class="text-gray-700">Customize Your Password</p>
                 <hr class="h-px my-2 border-0 bg-gray-500" />
-
-                <div class="flex justify-between items-center">
-                    <label for="length">
-                        Characters
-                    </label>
-                    <div class="w-2/3">
+                <div class="flex flex-col sm:flex-row justify-between items-center gap-2">
+                    <label for="length">Characters</label>
+                    <div class="w-full sm:w-2/3">
                         <input
                             type="range"
                             min="5"
                             max="100"
                             [(ngModel)]="passwordLength"
-                            class="ml-3 w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-400"
+                            class="w-full h-2 bg-gray-200 rounded-lg cursor-pointer"
                             id="myRange"
                         />
                     </div>
                     <div>{{ passwordLength }}</div>
                 </div>
-
                 <hr class="h-px my-2 border-0 bg-gray-500" />
-
-                <div class="flex justify-evenly gap-2">
-                    <div class="flex items-center me-4">
+                <div class="flex flex-wrap justify-evenly gap-2">
+                    <div class="flex items-center">
                         <input
                             id="alphabets-checkbox"
                             type="checkbox"
@@ -47,11 +40,9 @@
                             class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded"
                             (change)="validateSelection()"
                         />
-                        <label for="alphabets-checkbox" class="ms-2 font-medium">
-                            Alphabets
-                        </label>
+                        <label for="alphabets-checkbox" class="ml-2 font-medium">Alphabets</label>
                     </div>
-                    <div class="flex items-center me-4">
+                    <div class="flex items-center">
                         <input
                             id="numbers-checkbox"
                             type="checkbox"
@@ -59,18 +50,13 @@
                             class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded"
                             (change)="validateSelection()"
                         />
-                        <label for="numbers-checkbox" class="ms-2 font-medium">
-                            Numbers
-                        </label>
+                        <label for="numbers-checkbox" class="ml-2 font-medium">Numbers</label>
                     </div>
                 </div>
-
                 <div *ngIf="!isSelectionValid" class="text-red-500 text-center">
                     Please select at least one option (Alphabets or Numbers)!
                 </div>
-
                 <hr class="h-px my-2 border-0 bg-gray-500" />
-
                 <div class="flex items-center justify-center">
                     <input
                         id="symbols-checkbox"
@@ -78,36 +64,27 @@
                         [(ngModel)]="includeSpecialCharacters"
                         class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded"
                     />
-                    <label 
-                        for="symbols-checkbox" 
-                        class="ms-2 font-medium"
-                    >
-                        Symbols
-                    </label>
+                    <label for="symbols-checkbox" class="ml-2 font-medium">Symbols</label>
                 </div>
-
                 <hr class="h-px my-2 border-0 bg-gray-500" />
-
                 <p class="text-gray-700">Generated Password</p>
-
-                <div class="w-full min-h-16 rounded-md border-2 text-balance">
+                <div class="w-full min-h-16 rounded-md border-2">
                     <p
-                        class="w-full p-4 flex justify-center items-center flex-wrap text-black text-xl min-h-16 break-all text-center"
+                        class="w-full p-4 flex justify-center items-center flex-wrap text-black text-lg sm:text-xl min-h-16 break-all text-center"
                     >
                         {{ generatedPassword }}
                     </p>
                 </div>
-
-                <div class="flex gap-1">
+                <div class="flex flex-col sm:flex-row gap-2">
                     <button
-                        class="border bg-blue-500 text-white rounded-md p-2 w-1/2 text-lg font-bold hover:bg-blue-700 transition"
+                        class="border bg-blue-500 text-white rounded-md p-2 w-full sm:w-1/2 text-sm sm:text-lg font-bold hover:bg-blue-700 transition disabled:cursor-not-allowed disabled:opacity-60"
                         (click)="generatePassword()"
+                        [disabled]="!isSelectionValid"
                     >
                         Generate Password
                     </button>
-
                     <button
-                        class="border text-blue-500 border-blue-500 rounded-md p-2 w-1/2 text-lg font-bold"
+                        class="border text-blue-500 border-blue-500 rounded-md p-2 w-full sm:w-1/2 text-sm sm:text-lg font-bold"
                         (click)="copyText()"
                     >
                         {{ copyButtonText }}
