--- a/src/app/password-generator/password-generator.component.html
+++ b/src/app/password-generator/password-generator.component.html
@@ -28,7 +28,7 @@
                             id="myRange"
                         />
                     </div>
-                    <div>{{ passwordLength }}</div>
+                    <div class="text-gray-700 text-lg">{{ passwordLength }}</div>
                 </div>
                 <hr class="h-px my-2 border-0 bg-gray-500" />
                 <div class="flex flex-wrap justify-evenly gap-2">
