--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main class="bg-[#1a285f] h-fit">
+<main class="bg-[#1a285f] min-h-screen">
   <app-navbar />
   <div class="h-[94vh]">
     <app-password-generator /> 
