--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main class="bg-[#1a285f] min-h-screen">
   <app-navbar />
-  <div class="h-[94vh]">
+  <div class="h-fit">
     <app-password-generator /> 
   </div>
 </main>
