--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<main class="bg-[#1a285f] min-h-screen">
-  <app-navbar />
-  <div class="h-fit">
-    <app-password-generator /> 
-  </div>
+<app-navbar />
+<main class="bg-[#1a285f] min-h-[94.1vh] flex flex-col justify-center items-center">
+    <app-password-generator />
 </main>
 <router-outlet />
