--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-navbar />
-<main class="bg-[#1a285f] min-h-[94.1vh] flex flex-col justify-center items-center">
+<main
+    class="bg-[#1a285f] min-h-[94.1vh] flex flex-col justify-center items-center"
+>
     <app-password-generator />
 </main>
 <router-outlet />
