--- a/src/app/password-generator/password-generator.component.html
+++ b/src/app/password-generator/password-generator.component.html
@@ -1,5 +1,5 @@
 <div class="h-full flex flex-col justify-center items-center text-white">
-    <div class="w-[70%] h-[70vh] flex flex-col lg:flex-row items-center justify-evenly">
+    <div class="w-[70%] flex flex-col lg:flex-row items-center justify-evenly">
         <!-- Left Section -->
         <div class="w-full lg:w-[50%] text-center lg:text-left flex flex-col">
             <h1 class="text-4xl lg:text-6xl">
